# winning

./: Ability_Transforms.ipynb  Ability_Transforms_Updated.ipynb  BENCHMARKS.md  Democracy_Correlation_Trade.ipynb  Horse_Race_Problem.ipynb  Kentucky_Derby_2020_Blog.ipynb  Kentucky_Derby_2021_Blog.ipynb  Kentucky_Derby_2021_Place_Betting.ipynb  Kentucky_Derby_2021_Skew_Normal.ipynb  LITERATURE.md  README.md  RENOVATION.md  Sepal_Width.ipynb  density_of_minimum_of_many.ipynb  dilation.ipynb  pyproject.toml  setup.py  show_pricing_example.ipynb  splitting_race.ipynb  synonyms.ipynb  triangle_man.ipynb  triangle_man_2.ipynb  triangle_man_extended.ipynb
attic/: README.md  lattice_simulation.py  pandas_util.py
data/: README.md
docs/: CNAME  LITERATURE.md  academic.css  index.html
examples/: rate_a_league.py
examples_basic/: calibrate_horse_race_with_std_normal.py  calibrate_horse_race_with_std_normal_and_plot.py  calibrate_horse_race_with_std_normal_and_price_place_bets.py  calibrate_horse_race_with_std_normal_changing_lattice.py
examples_events/: events_example.py
examples_harville_comparison/: README.md  comparison_to_harville.py  exacta.csv
examples_m6/: infer_five_from_one.py
examples_pandas/: add_skew_ability_to_pandas.py
examples_scalability/: demo_fast_convergence.py  demo_scaling_accuracy.py  demo_scaling_performance.py  demo_small_race_performance.py
examples_visual/: demo_calibration_plot.py  demo_check_against_montecarlo.py  demo_implicit_payoffs_plot.py  demo_large_race_plot.py  demo_lattice_plot.py  demo_minimum_pdf_plot.py
(+129 files in other folders)
